solution for deleting 3 n more both zero pressures

--- a/work.ipynb
+++ b/work.ipynb
@@ -136,26 +136,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'SeriesGroupBy' object has no attribute 'tolist'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-c56ce4127351>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m#minus_wells\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mdummy1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdummy1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Скважина №'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mwells_del_both\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdummy1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Index'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mdummy1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m    910\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    911\u001b[0m         raise AttributeError(\n\u001b[1;32m--> 912\u001b[1;33m             \u001b[1;34mf\"'{type(self).__name__}' object has no attribute '{attr}'\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    913\u001b[0m         )\n\u001b[0;32m    914\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'SeriesGroupBy' object has no attribute 'tolist'"
-     ]
+     "data": {
+      "text/plain": [
+       "[279, 280, 281, 282, 302, 303, 304]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "dummy['Index'] = dummy.index\n",
-    "dummy1 = dummy.drop(dummy[dummy['Пластовое давление (ТР), атм'] != 0].index)\n",
-    "dummy1 = dummy1.drop(dummy1[dummy1['Забойное давление (ТР), атм'] != 0].index)\n",
+    "dummy1 = dummy.drop(dummy[dummy['Забойное давление (ТР), атм'] != 0].index)\n",
+    "dummy1 = dummy1.drop(dummy1[dummy1['Пластовое давление (ТР), атм'] != 0].index)\n",
+    "\n",
     "#wells_both_zero\n",
     "#dummy1=dummy1.groupby(by=['Скважина №']).mean()\n",
     "#dummy = dummy.groupby('Скважина №').agg(\n",
@@ -164,19 +163,244 @@
     "#dummy1.reset_index(inplace=True)\n",
     "#minus_wells=dummy1['Скважина №'].tolist()\n",
     "#minus_wells\n",
-    "dummy1=dummy1.groupby('Скважина №')\n",
-    "wells_del_both=dummy1['Index'].tolist()\n",
+    "dummy1 = dummy1.groupby('Скважина №').agg(\n",
+    "    {'Index': lambda x: \n",
+    "     x.tolist()})\n",
+    "dummy1['кол']=dummy1.apply(lambda x: len(x['Index']), axis=1)\n",
+    "dummy1 = dummy1.drop(dummy1[dummy1['кол'] < 3].index)\n",
+    "#wells_del_both=dummy1['Index'].tolist()\n",
+    "delete=[]\n",
+    "for i in dummy1['Index']:\n",
+    "    delete+=i\n",
     "\n",
-    "dummy1"
+    "delete"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Дата</th>\n",
+       "      <th>Скважина №</th>\n",
+       "      <th>Дебит жидкости, м3/сут</th>\n",
+       "      <th>Дебит нефти, т/сут</th>\n",
+       "      <th>Обводненность, %</th>\n",
+       "      <th>Пластовое давление (ТР), атм</th>\n",
+       "      <th>Забойное давление (ТР), атм</th>\n",
+       "      <th>Пласт</th>\n",
+       "      <th>Index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>78.60</td>\n",
+       "      <td>55.39</td>\n",
+       "      <td>22.13</td>\n",
+       "      <td>263.0</td>\n",
+       "      <td>131.1</td>\n",
+       "      <td>Ю3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-08-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>84.36</td>\n",
+       "      <td>59.86</td>\n",
+       "      <td>21.52</td>\n",
+       "      <td>263.0</td>\n",
+       "      <td>118.3</td>\n",
+       "      <td>Ю3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-09-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85.34</td>\n",
+       "      <td>68.98</td>\n",
+       "      <td>9.13</td>\n",
+       "      <td>263.0</td>\n",
+       "      <td>107.1</td>\n",
+       "      <td>Ю3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-10-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>88.41</td>\n",
+       "      <td>71.09</td>\n",
+       "      <td>9.67</td>\n",
+       "      <td>263.0</td>\n",
+       "      <td>94.8</td>\n",
+       "      <td>Ю3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-11-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>79.03</td>\n",
+       "      <td>62.62</td>\n",
+       "      <td>11.16</td>\n",
+       "      <td>263.0</td>\n",
+       "      <td>79.4</td>\n",
+       "      <td>Ю3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295</th>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>10</td>\n",
+       "      <td>33131.00</td>\n",
+       "      <td>123.00</td>\n",
+       "      <td>33.00</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>Ю3</td>\n",
+       "      <td>299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>2019-02-01</td>\n",
+       "      <td>11</td>\n",
+       "      <td>13123.00</td>\n",
+       "      <td>3123.00</td>\n",
+       "      <td>123123.00</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>Ю3</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>2019-03-01</td>\n",
+       "      <td>11</td>\n",
+       "      <td>331.00</td>\n",
+       "      <td>3123.00</td>\n",
+       "      <td>123.00</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>Ю3</td>\n",
+       "      <td>301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2131.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>12331.00</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>1231.0</td>\n",
+       "      <td>Ю3</td>\n",
+       "      <td>305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>11</td>\n",
+       "      <td>33131.00</td>\n",
+       "      <td>123.00</td>\n",
+       "      <td>33.00</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>Ю3</td>\n",
+       "      <td>306</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Дата  Скважина №  Дебит жидкости, м3/сут  Дебит нефти, т/сут  \\\n",
+       "0   2016-07-01           1                   78.60               55.39   \n",
+       "1   2016-08-01           1                   84.36               59.86   \n",
+       "2   2016-09-01           1                   85.34               68.98   \n",
+       "3   2016-10-01           1                   88.41               71.09   \n",
+       "4   2016-11-01           1                   79.03               62.62   \n",
+       "..         ...         ...                     ...                 ...   \n",
+       "295 2021-02-01          10                33131.00              123.00   \n",
+       "296 2019-02-01          11                13123.00             3123.00   \n",
+       "297 2019-03-01          11                  331.00             3123.00   \n",
+       "298 2021-01-01          11                 2131.00                0.00   \n",
+       "299 2021-02-01          11                33131.00              123.00   \n",
+       "\n",
+       "     Обводненность, %  Пластовое давление (ТР), атм  \\\n",
+       "0               22.13                         263.0   \n",
+       "1               21.52                         263.0   \n",
+       "2                9.13                         263.0   \n",
+       "3                9.67                         263.0   \n",
+       "4               11.16                         263.0   \n",
+       "..                ...                           ...   \n",
+       "295             33.00                         123.0   \n",
+       "296         123123.00                         123.0   \n",
+       "297            123.00                         123.0   \n",
+       "298          12331.00                         123.0   \n",
+       "299             33.00                         123.0   \n",
+       "\n",
+       "     Забойное давление (ТР), атм Пласт  Index  \n",
+       "0                          131.1    Ю3      0  \n",
+       "1                          118.3    Ю3      1  \n",
+       "2                          107.1    Ю3      2  \n",
+       "3                           94.8    Ю3      3  \n",
+       "4                           79.4    Ю3      4  \n",
+       "..                           ...   ...    ...  \n",
+       "295                        123.0    Ю3    299  \n",
+       "296                        123.0    Ю3    300  \n",
+       "297                        123.0    Ю3    301  \n",
+       "298                       1231.0    Ю3    305  \n",
+       "299                        123.0    Ю3    306  \n",
+       "\n",
+       "[300 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dummy=dummy[~dummy['Index'].isin(wells_del_both)].reset_index(drop=True)\n",
+    "dummy=dummy[~dummy['Index'].isin(delete)].reset_index(drop=True)\n",
     "dummy"
    ]
   }
